dpkg (1.16.1.1~bpo60+2) UNRELEASED; urgency=low

  * Only build dpkg-dev and libdpkg-perl as discussed with the backports
    team: http://lists.debian.org/debian-backports/2011/11/msg00030.html

 -- Raphaël Hertzog <hertzog@debian.org>  Wed, 23 Nov 2011 13:48:47 +0100

dpkg (1.16.1.1~bpo60+1) squeeze-backports; urgency=low

  * Rebuild for squeeze-backports.

 -- Raphaël Hertzog <hertzog@debian.org>  Sat, 29 Oct 2011 18:30:02 +0200

dpkg (1.16.1.2) unstable; urgency=medium

  [ Raphaël Hertzog ]
  * Fix another typo to correctly set DEB_*_ARCH_BITS in architecture.mk.
  * Set urgency to medium as changes are minor, and it should migrate
    quickly in case 1.16.2 comes soon.

  [ Jonathan Nieder ]
  * Update dpkg-buildflags(1) to note that the processor option
    -D_FORTIFY_SOURCE=2 is set in CPPFLAGS now instead of CFLAGS and
    CXXFLAGS. Closes: #646073

 -- Raphaël Hertzog <hertzog@debian.org>  Fri, 25 Nov 2011 11:18:30 +0100

dpkg (1.16.1.1) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Fix dpkg-source to not ignore the automatic patch when checking
    for unrecorded changes. Closes: #643148
  * Let dpkg-source --commit create debian/patches when required.
    Closes: #643037
  * Fix dpkg-buildflags --dump to return 0 as exit code and not 1.
  * Update dpkg-buildflags(1) to not include quotes in the examples
    setting DEB_BUILD_MAINT_OPTIONS.
  * Stop outputting build flags in dpkg-buildpackage as it confuses
    maintainers who are overriding them in debian/rules and who
    are not seeing the expected value in the build log.
  * Fix trigger setup code to not reset the status of packages
    when they are in a status different from triggers-awaited,
    triggers-pending or installed. Closes: #644492
  * Fix dpkg-source to ignore changes on debian/patches/.dpkg-source-applied
    when building a "2.0" source package. Closes: #642656
  * Fix buildflags.mk to re-export the environment variables that