@@ -13,125 +13,125 @@
                  opt_ru:"-L koi8-r         -A utf-8"      \
                  opt_sv:"-L ISO-8859-1     -A utf-8"
 
-[type:man] deb.5 $lang:$lang/deb.5 \
+[type:man] deb.5 $lang:$(builddir)/$lang/deb.5 \
            add_$lang:po/$lang.add
 
-[type:man] deb-control.5 $lang:$lang/deb-control.5 \
+[type:man] deb-control.5 $lang:$(builddir)/$lang/deb-control.5 \
            add_$lang:po/$lang.add
 
-[type:man] deb-src-control.5 $lang:$lang/deb-src-control.5 \
+[type:man] deb-src-control.5 $lang:$(builddir)/$lang/deb-src-control.5 \
            add_$lang:po/$lang.add
 
-[type:man] deb-split.5 $lang:$lang/deb-split.5 \
+[type:man] deb-split.5 $lang:$(builddir)/$lang/deb-split.5 \
            add_$lang:po/$lang.add
 
-[type:man] deb-version.5 $lang:$lang/deb-version.5 \
+[type:man] deb-version.5 $lang:$(builddir)/$lang/deb-version.5 \
            add_$lang:po/$lang.add
 
-[type:man] deb-old.5 $lang:$lang/deb-old.5 \
+[type:man] deb-old.5 $lang:$(builddir)/$lang/deb-old.5 \
            add_$lang:po/$lang.add
 
-[type:man] deb-override.5 $lang:$lang/deb-override.5 \
+[type:man] deb-override.5 $lang:$(builddir)/$lang/deb-override.5 \
            add_$lang:po/$lang.add
 
-[type:man] deb-extra-override.5 $lang:$lang/deb-extra-override.5 \
+[type:man] deb-extra-override.5 $lang:$(builddir)/$lang/deb-extra-override.5 \
            add_$lang:po/$lang.add
 
-[type:man] deb-shlibs.5 $lang:$lang/deb-shlibs.5 \
+[type:man] deb-shlibs.5 $lang:$(builddir)/$lang/deb-shlibs.5 \
            add_$lang:po/$lang.add
 
-[type:man] deb-substvars.5 $lang:$lang/deb-substvars.5 \
+[type:man] deb-substvars.5 $lang:$(builddir)/$lang/deb-substvars.5 \
            add_$lang:po/$lang.add
 
-[type:man] deb-symbols.5 $lang:$lang/deb-symbols.5 \
+[type:man] deb-symbols.5 $lang:$(builddir)/$lang/deb-symbols.5 \
            add_$lang:po/$lang.add
 
-[type:man] deb-triggers.5 $lang:$lang/deb-triggers.5 \
+[type:man] deb-triggers.5 $lang:$(builddir)/$lang/deb-triggers.5 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg.1 $lang:$lang/dpkg.1 \
+[type:man] dpkg.1 $lang:$(builddir)/$lang/dpkg.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-architecture.1 $lang:$lang/dpkg-architecture.1 \
+[type:man] dpkg-architecture.1 $lang:$(builddir)/$lang/dpkg-architecture.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg.cfg.5 $lang:$lang/dpkg.cfg.5 \
+[type:man] dpkg.cfg.5 $lang:$(builddir)/$lang/dpkg.cfg.5 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-buildflags.1 $lang:$lang/dpkg-buildflags.1 \
+[type:man] dpkg-buildflags.1 $lang:$(builddir)/$lang/dpkg-buildflags.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-buildpackage.1 $lang:$lang/dpkg-buildpackage.1 \
+[type:man] dpkg-buildpackage.1 $lang:$(builddir)/$lang/dpkg-buildpackage.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-checkbuilddeps.1 $lang:$lang/dpkg-checkbuilddeps.1 \
+[type:man] dpkg-checkbuilddeps.1 $lang:$(builddir)/$lang/dpkg-checkbuilddeps.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-distaddfile.1 $lang:$lang/dpkg-distaddfile.1 \
+[type:man] dpkg-distaddfile.1 $lang:$(builddir)/$lang/dpkg-distaddfile.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-deb.1 $lang:$lang/dpkg-deb.1 \
+[type:man] dpkg-deb.1 $lang:$(builddir)/$lang/dpkg-deb.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-divert.8 $lang:$lang/dpkg-divert.8 \
+[type:man] dpkg-divert.8 $lang:$(builddir)/$lang/dpkg-divert.8 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-genchanges.1 $lang:$lang/dpkg-genchanges.1 \
+[type:man] dpkg-genchanges.1 $lang:$(builddir)/$lang/dpkg-genchanges.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-gencontrol.1 $lang:$lang/dpkg-gencontrol.1 \
+[type:man] dpkg-gencontrol.1 $lang:$(builddir)/$lang/dpkg-gencontrol.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-gensymbols.1 $lang:$lang/dpkg-gensymbols.1 \
+[type:man] dpkg-gensymbols.1 $lang:$(builddir)/$lang/dpkg-gensymbols.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-maintscript-helper.1 $lang:$lang/dpkg-maintscript-helper.1 \
+[type:man] dpkg-maintscript-helper.1 $lang:$(builddir)/$lang/dpkg-maintscript-helper.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-mergechangelogs.1 $lang:$lang/dpkg-mergechangelogs.1 \
+[type:man] dpkg-mergechangelogs.1 $lang:$(builddir)/$lang/dpkg-mergechangelogs.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-name.1 $lang:$lang/dpkg-name.1 \
+[type:man] dpkg-name.1 $lang:$(builddir)/$lang/dpkg-name.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-parsechangelog.1 $lang:$lang/dpkg-parsechangelog.1 \
+[type:man] dpkg-parsechangelog.1 $lang:$(builddir)/$lang/dpkg-parsechangelog.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-query.1 $lang:$lang/dpkg-query.1 \
+[type:man] dpkg-query.1 $lang:$(builddir)/$lang/dpkg-query.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-scanpackages.1 $lang:$lang/dpkg-scanpackages.1 \
+[type:man] dpkg-scanpackages.1 $lang:$(builddir)/$lang/dpkg-scanpackages.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-scansources.1 $lang:$lang/dpkg-scansources.1 \
+[type:man] dpkg-scansources.1 $lang:$(builddir)/$lang/dpkg-scansources.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-shlibdeps.1 $lang:$lang/dpkg-shlibdeps.1 \
+[type:man] dpkg-shlibdeps.1 $lang:$(builddir)/$lang/dpkg-shlibdeps.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-source.1 $lang:$lang/dpkg-source.1 \
+[type:man] dpkg-source.1 $lang:$(builddir)/$lang/dpkg-source.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-split.1 $lang:$lang/dpkg-split.1 \
+[type:man] dpkg-split.1 $lang:$(builddir)/$lang/dpkg-split.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-statoverride.8 $lang:$lang/dpkg-statoverride.8 \
+[type:man] dpkg-statoverride.8 $lang:$(builddir)/$lang/dpkg-statoverride.8 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-trigger.1 $lang:$lang/dpkg-trigger.1 \
+[type:man] dpkg-trigger.1 $lang:$(builddir)/$lang/dpkg-trigger.1 \
            add_$lang:po/$lang.add
 
-[type:man] dpkg-vendor.1 $lang:$lang/dpkg-vendor.1 \
+[type:man] dpkg-vendor.1 $lang:$(builddir)/$lang/dpkg-vendor.1 \
            add_$lang:po/$lang.add
 
-[type:man] dselect.1 $lang:$lang/dselect.1 \
+[type:man] dselect.1 $lang:$(builddir)/$lang/dselect.1 \
            add_$lang:po/$lang.add
 
-[type:man] dselect.cfg.5 $lang:$lang/dselect.cfg.5 \
+[type:man] dselect.cfg.5 $lang:$(builddir)/$lang/dselect.cfg.5 \
            add_$lang:po/$lang.add
 
-[type:man] start-stop-daemon.8 $lang:$lang/start-stop-daemon.8 \
+[type:man] start-stop-daemon.8 $lang:$(builddir)/$lang/start-stop-daemon.8 \
            add_$lang:po/$lang.add
 
-[type:man] update-alternatives.8 $lang:$lang/update-alternatives.8 \
+[type:man] update-alternatives.8 $lang:$(builddir)/$lang/update-alternatives.8 \
            add_$lang:po/$lang.add
